add 'Projects' collection to _config file

--- a/_config.yml
+++ b/_config.yml
@@ -29,3 +29,9 @@ markdown: kramdown
 
 # Layout settings
 home-link-in-menu: yes
+
+# Collections
+collections:
+  projects:
+    output: true
+    permalink: /projects/:path/
