--- a/_data/site_settings_info.yml
+++ b/_data/site_settings_info.yml
@@ -1,5 +1,5 @@
 ---
-logo-image-url: images/logo.svg
+logo-image-url: images/logo.png
 title: Phantom
 description: Enter your custom site description here (~160 characters). Optimizing your site's meta description is a very important aspect of on-page SEO.
 ---
