update footer data file and footer.html with full social profile URLs instead of partials

--- a/_data/footer_follow_info.yml
+++ b/_data/footer_follow_info.yml
@@ -1,10 +1,10 @@
 ---
-github_username: scottgallant
-twitter_username: forestryio
-facebook_URL: forestryio
-instagram_username: forestryio
-dribbble_username: forestryio
-500px_username: forestryio
+github_url: https://github.com/scottgallant
+twitter_url: https://twitter.com/forestryio
+facebook_url: https://www.facebook.com/forestryio
+instagram_url: https://www.instagram.com/forestryio
+dribbble_url: https://dribbble.com/forestryio
+500px_url: https://500px.com/forestryio
 phone: (123) 456-7890
 email: info@forestry.io
 ---
