add default front matter for posts to config file

--- a/_config.yml
+++ b/_config.yml
@@ -35,3 +35,14 @@ collections:
   projects:
     output: true
     permalink: /projects/:path/
+
+# Defaults
+defaults:
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: post
+      categories: ""
+      tags: []
+      featured-image: ""    
