add default front matter for pages & projects to config file

--- a/_config.yml
+++ b/_config.yml
@@ -45,4 +45,17 @@ defaults:
       layout: post
       categories: ""
       tags: []
-      featured-image: ""    
+      featured-image: ""
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: page
+      featured-image: ""
+  - scope:
+      path: ""
+      type: projects
+    values:
+      layout: project
+      tags: []
+      featured-image: ""      
