add homepage-thumbnail to default front matter for project pages

--- a/_config.yml
+++ b/_config.yml
@@ -58,4 +58,5 @@ defaults:
     values:
       layout: project
       tags: []
-      featured-image: ""      
+      featured-image: ""
+      homepage-thumbnail: "" 
