change 'Blog Posts' to 'Blog' in menu (to match Phantom)

--- a/_data/menu_info.yml
+++ b/_data/menu_info.yml
@@ -8,7 +8,7 @@
 - title: Generic Page
   url: /generic.html
   priority: 3
-- title: Blog Posts
+- title: Blog
   url: /blog.html
   priority: 4
 ---
