--- a/_data/site_settings_info.yml
+++ b/_data/site_settings_info.yml
@@ -1,5 +1,5 @@
 ---
-logo_image: images/logo.png
-title: Phantom
-description: Enter your custom site description here (~160 characters). Optimizing your site's meta description is a very important aspect of on-page SEO.
+logo_image: images/logos/logo_text_waves.png
+title: Silver Strand Physical Therapy
+description: Silver Stand Physical Therapy provides physical therapy services to patients throughout Imperial Beach and the South Bay. Schedule an initial evaluation today!
 ---
