--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Phantom
-email: youremailaddress@gmail.com
-description: The Jekyll version of the Phantom theme by HTML5 UP.
+title: Silver Strand Physical Therapy
+email: admin@silverstrandphysicaltherapy.com
+description: Silver Stand Physical Therapy provides physical therapy services to patients throughout Imperial Beach and the South Bay. Schedule your appointment today!
 url: https://sspt-v2.netlify.com # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog
 
 # Logo settings
-logo-placeholder: images/logo/logo_text_waves.png
+logo: images/logos/logo_text_waves.png
 
 # Build settings
 markdown: kramdown
