--- a/_data/menu_info.yml
+++ b/_data/menu_info.yml
@@ -3,12 +3,12 @@
   url: /
   priority: 1
 - title: Elements
-  url: /elements.html
+  url: /elements
   priority: 2
 - title: Generic Page
-  url: /generic.html
+  url: /generic
   priority: 3
 - title: Blog
-  url: /blog.html
+  url: /blog
   priority: 4
 ---
