--- a/_data/footer_info.yml
+++ b/_data/footer_info.yml
@@ -1,9 +1,9 @@
 ---
-twitter_url: https://www.twitter.com/forestryio
-facebook_url: https://www.facebook.com/forestryio
-instagram_url: https://www.instagram.com/forestryio
-dribbble_url: https://dribbble.com/forestryio
-github_url: https://github.com/scottgallant
-500px_url: ''
-phone: "(123) 456-7890"
-email: info@forestry.io
+twitter_url: https://www.twitter.com/silverstrandpt
+facebook_url: https://www.facebook.com/silverstrandpt
+instagram_url: https://www.instagram.com/silverstrandpt
+phone: (619) 941-2680
+fax: (619) 941-2681
+email: admin@silverstrandpt.com
+address: 1155 13th Street, Imperial Beach, CA 91932
+---
