--- a/_data/menu_info.yml
+++ b/_data/menu_info.yml
@@ -1,14 +1,14 @@
 ---
-title: Home
-  url: {{ site.url }}
-title: Our Staff
-  url: /staff
-title: Our Services
-  url: /services
-title: Insurance
-  url: /insurance
-title: Blog
-  url: /blog
-title: Contact
-  url: /#contact
+- title: Home
+  url: "/"
+- title: Our Staff
+  url: "/staff"
+- title: Our Services
+  url: "/services"
+- title: Insurance
+  url: "/insurance"
+- title: Blog
+  url: "/blog"
+- title: Contact
+  url: "/#contact"
 ---
