reformat menu_info.yml file to work with Siteleaf

--- a/_data/menu_info.yml
+++ b/_data/menu_info.yml
@@ -1,14 +1,14 @@
 ---
 - title: Home
-  url: "/"
+  url:
 - title: Our Staff
-  url: "/staff"
+  url:
 - title: Our Services
-  url: "/services"
+  url:
 - title: Insurance
-  url: "/insurance"
+  url:
 - title: Blog
-  url: "/blog"
+  url:
 - title: Contact
-  url: "/#contact"
+  url:
 ---
