--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,10 @@ defaults:
     path: ''
     type: posts
   values:
+    featured-image: ''
     permalink: "/:categories/:title"
 url: https://sspt-v2.netlify.com
-baseurl: 
+baseurl:
 email: admin@silverstrandphysicaltherapy.com
 description: Silver Stand Physical Therapy provides physical therapy services to patients
   throughout Imperial Beach and the South Bay. Schedule your appointment today!
