update email address

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ defaults:
     description: ''
 url: https://www.silverstrandpt.com
 baseurl: 
-email: admin@silverstrandphysicaltherapy.com
+email: admin@silverstrandpt.com
 description: Silver Stand Physical Therapy provides physical therapy services to patients
   throughout Imperial Beach and the South Bay. Schedule your appointment today!
 logo: uploads/images/logos/logo_text_waves.png
