add blog link to nav menu

--- a/_data/menu_info.yml
+++ b/_data/menu_info.yml
@@ -10,7 +10,8 @@ navmenu:
   url: "/insurance"
 - title: Service Areas
   url: "/service-areas"
+- title: Blog
+  url: "/blog"
 - title: Contact
   url: "/#contact"
 ---
-
