add Chula Vista location info

--- a/_data/footer_info.yml
+++ b/_data/footer_info.yml
@@ -5,6 +5,6 @@ instagram_url: https://www.instagram.com/silverstrandpt
 phone: "(619) 941-2680"
 fax: "(619) 941-2681"
 email: admin@silverstrandpt.com
-address: 760 13th Street, Imperial Beach, CA 91932
+address-1: 760 13th Street, Imperial Beach, CA 91932
+address-2: 10969 Wheatlands Avenue, Suite C, Santee, CA 92071
 ---
-
