--- a/_data/footer_info.yml
+++ b/_data/footer_info.yml
@@ -6,6 +6,5 @@ phone: "(619) 941-2680"
 fax: "(619) 941-2681"
 email: admin@silverstrandpt.com
 address-1: 760 13th Street, Imperial Beach, CA 91932
-address-2: 10969 Wheatlands Avenue, Suite C, Santee, CA 92071
+address-2: 1172 3 rd Avenue, Suite D6, Chula Vista, CA 91911
 ---
-
